# agent-guardrail

./: .gitignore  CONTRIBUTING.md  Dockerfile  LAUNCH-CHECKLIST.md  README.md  SECURITY.md  mcp_guardrail_http.py  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
agent_guardrail/: __init__.py  __main__.py  billing.py  cli.py  policy.py  proxy.py  store.py
deploy/: Caddyfile.snippet  agent-card.json  com.eren.guardrail-proxy.plist  guardrail-proxy.service
docs/: 100-agent-consensus.md  nlnet-application.md
examples/: crewai_guardrail.py  decorator.py  langchain_callback.py
tests/: conftest.py  test_billing.py  test_cli.py  test_policy.py  test_store.py
